    button", it caused more problems than it solved
  * add 'enable' pin to charge-pump component
  * fix holecircle
  * fix constraint violation right after a probing move
  * abort if the probe does not trip before a probing move ends
  * index handling fixes for the ppmc series
  * improve the initial viewpoint in perspective mode in AXIS preview

 -- Chris Radek <chris@timeguy.com>  Sun,  6 May 2007 14:41:47 -0500

emc2 (1:2.1.4) unstable; urgency=low

  * fix image-to-gcode
  * fix jog wheel moves that were stopped too soon
  * fix bug for the Mini GUI. Simultaneous jogging of multiple axes
    caused runaways.
  * give the axisui hal pins correct initial values so the jogwheel axis
    matches the screen initially
  * fix M51 (spindle speed override enable/disable)
  * add "velocity mode" for jogwheels - axis stops immediately when wheel stops,
    even though that loses position sync between the wheel and axis
  * AXIS: fix occasional warning 'invalid command name "-1211088452callit"'
  * AXIS: fix changing axes with keyboard while jogging with the jog button

 -- Chris Radek <chris@timeguy.com>  Sun, 25 Mar 2007 21:50:59 -0500

emc2 (1:2.1.3) unstable; urgency=low

  * make 'load' button work in classicladder
  * add french translation of axis
  * improve italian translation of axis
  * make 'milltask' not consume all CPU after 'run from line' has been used
  * new userspace component: hal_input for all Linux-recognized input devices
  * image-to-gcode: spindle speed and plunge feed rate can now be selected
  * image-to-gcode: tool shape compensation bugfixes
  * image-to-gcode: add documentation
  * stepgen: revise core to eliminate 1 count deadband and resulting "bobbles"
  * improve segment throughput for slow machines when using AXIS
  * fix cutter compensation sticky words when using zero radius tool
  * fix incorrect path in some circumstances after G40 in lathe mode
  * in AXIS, unhighlight a program line that was chosen interactively when